k8s/crawler/crawler-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
  labels:
    app: search_engine
    component: crawler
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search_engine
      component: crawler
  template:
    metadata:
      annotations:
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
      name: crawler-pod
      labels:
        app: search_engine
        component: crawler
    spec:
      containers:
      - image: mikhailbelikov/crawler-engine:1.0
        imagePullPolicy: Always
        name: crawler
