k8s/crawler/ui-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - 51.250.82.190.nip.io
      - grafana.51.250.82.190.nip.io
      - prometheus.51.250.82.190.nip.io
      - alertmanager.51.250.82.190.nip.io
      secretName: letsencrypt
  rules:
    - host: 51.250.82.190.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ui
              port:
                number: 8000
    - host: grafana.51.250.82.190.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-grafana
              port:
                number: 80
    - host: prometheus.51.250.82.190.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-operated
              port:
                number: 9090
    - host: alertmanager.51.250.82.190.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: alertmanager-operated
              port:
                number: 9093
